// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden recipes — snapshot regression > banana-classic: result snapshot is stable 1`] = `
{
  "config_version": "0.4.0",
  "cost_complete": true,
  "engine_version": "0.4.0",
  "ice_fraction": 61.675,
  "indicators": [
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "pod",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "npac",
      "status": "too_hard",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "ice_fraction",
      "status": "too_hard",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "lactose",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "lactose_sandiness_risk",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "fat",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "aerating_protein",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "protein_in_solids",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "total_solids",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "water",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "alcohol",
      "status": "good",
      "temperature_fallback": false,
    },
  ],
  "npac": 26.2026,
  "nutrition": {
    "alcohol_g": 0,
    "carbohydrate_g": 23.53,
    "fat_g": 5.28,
    "fiber_g": 1.05,
    "kcal": 151.51,
    "protein_g": 3.13,
    "salt_g": 0.09,
    "saturated_fat_g": null,
    "sugars_g": 20.48,
  },
  "pac": 25.173,
  "percentages": {
    "alcohol_percent": 0,
    "dextrose_percent": 2.76,
    "fat_percent": 5.279,
    "fiber_percent": 1.05,
    "fructose_percent": 1.2,
    "glucose_percent": 1.25,
    "lactose_percent": 4.174,
    "polyol_percent": 0,
    "protein_percent": 3.129,
    "salt_percent": 0.088,
    "solids_percent": 32.98,
    "sucrose_percent": 11.1,
    "water_percent": 67.02,
  },
  "pod": 16.8112,
  "scores": {
    "cost": 100,
    "flavor": 70,
    "overall": 75.31,
    "technical": 64.53,
  },
  "total_batch_g": 1000,
  "warnings": [],
}
`;

exports[`golden recipes — snapshot regression > chocolate-classic: result snapshot is stable 1`] = `
{
  "config_version": "0.4.0",
  "cost_complete": true,
  "engine_version": "0.4.0",
  "ice_fraction": 59.1028,
  "indicators": [
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "pod",
      "status": "too_sweet",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "npac",
      "status": "too_hard",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "ice_fraction",
      "status": "too_hard",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "lactose",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "lactose_sandiness_risk",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "fat",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "aerating_protein",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "protein_in_solids",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "total_solids",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "water",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "alcohol",
      "status": "good",
      "temperature_fallback": false,
    },
  ],
  "npac": 28.6395,
  "nutrition": {
    "alcohol_g": 0,
    "carbohydrate_g": 25.47,
    "fat_g": 7.7,
    "fiber_g": 2.45,
    "kcal": 193.75,
    "protein_g": 4.62,
    "salt_g": 0.11,
    "saturated_fat_g": null,
    "sugars_g": 24.13,
  },
  "pac": 27.411,
  "percentages": {
    "alcohol_percent": 0,
    "dextrose_percent": 3.68,
    "fat_percent": 7.704,
    "fiber_percent": 2.45,
    "fructose_percent": 0,
    "glucose_percent": 0,
    "lactose_percent": 4.719,
    "polyol_percent": 0,
    "protein_percent": 4.6155,
    "salt_percent": 0.105,
    "solids_percent": 41.509,
    "sucrose_percent": 15.7,
    "water_percent": 58.491,
  },
  "pod": 19.1782,
  "scores": {
    "cost": 100,
    "flavor": 70,
    "overall": 75.15,
    "technical": 64.12,
  },
  "total_batch_g": 1000,
  "warnings": [],
}
`;

exports[`golden recipes — snapshot regression > high-fruit-water: result snapshot is stable 1`] = `
{
  "config_version": "0.4.0",
  "cost_complete": true,
  "engine_version": "0.4.0",
  "ice_fraction": 63.3688,
  "indicators": [
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "pod",
      "status": "too_sweet",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "npac",
      "status": "too_hard",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "ice_fraction",
      "status": "too_hard",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "lactose",
      "status": "needs_correction",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "lactose_sandiness_risk",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "fat",
      "status": "needs_correction",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "aerating_protein",
      "status": "needs_correction",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "protein_in_solids",
      "status": "needs_correction",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "total_solids",
      "status": "risky",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "water",
      "status": "risky",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "alcohol",
      "status": "good",
      "temperature_fallback": false,
    },
  ],
  "npac": 24.598,
  "nutrition": {
    "alcohol_g": 0,
    "carbohydrate_g": 23.93,
    "fat_g": 0.25,
    "fiber_g": 5.92,
    "kcal": 94.27,
    "protein_g": 1.02,
    "salt_g": 0,
    "saturated_fat_g": null,
    "sugars_g": 17.92,
  },
  "pac": 24.598,
  "percentages": {
    "alcohol_percent": 0,
    "dextrose_percent": 3.68,
    "fat_percent": 0.255,
    "fiber_percent": 5.925,
    "fructose_percent": 2.04,
    "glucose_percent": 1.7,
    "lactose_percent": 0,
    "polyol_percent": 0,
    "protein_percent": 1.02,
    "salt_percent": 0,
    "solids_percent": 26.52,
    "sucrose_percent": 10.5,
    "water_percent": 73.48,
  },
  "pod": 18.0104,
  "scores": {
    "cost": 100,
    "flavor": 70,
    "overall": 58.65,
    "technical": 28.65,
  },
  "total_batch_g": 1000,
  "warnings": [],
}
`;

exports[`golden recipes — snapshot regression > jim-beam-alcohol: result snapshot is stable 1`] = `
{
  "config_version": "0.4.0",
  "cost_complete": true,
  "engine_version": "0.4.0",
  "ice_fraction": 41.4844,
  "indicators": [
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "pod",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "npac",
      "status": "too_soft",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "ice_fraction",
      "status": "too_soft",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "lactose",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "lactose_sandiness_risk",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "fat",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "aerating_protein",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "protein_in_solids",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "total_solids",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "water",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "alcohol",
      "status": "risky",
      "temperature_fallback": false,
    },
  ],
  "npac": 45.3306,
  "nutrition": {
    "alcohol_g": 2.8,
    "carbohydrate_g": 21.26,
    "fat_g": 6.68,
    "fiber_g": 0.4,
    "kcal": 178.45,
    "protein_g": 3.49,
    "salt_g": 0.11,
    "saturated_fat_g": null,
    "sugars_g": 20.86,
  },
  "pac": 23.347,
  "percentages": {
    "alcohol_percent": 2.8,
    "dextrose_percent": 2.76,
    "fat_percent": 6.678,
    "fiber_percent": 0.4,
    "fructose_percent": 0,
    "glucose_percent": 0,
    "lactose_percent": 5.103,
    "polyol_percent": 0,
    "protein_percent": 3.491,
    "salt_percent": 0.108,
    "solids_percent": 32.4205,
    "sucrose_percent": 13,
    "water_percent": 64.7795,
  },
  "pod": 15.8589,
  "scores": {
    "cost": 100,
    "flavor": 70,
    "overall": 72.59,
    "technical": 68.82,
  },
  "total_batch_g": 1000,
  "warnings": [
    "alcohol_above_safe_range",
  ],
}
`;

exports[`golden recipes — snapshot regression > milk-base-classic: result snapshot is stable 1`] = `
{
  "config_version": "0.4.0",
  "cost_complete": true,
  "engine_version": "0.4.0",
  "ice_fraction": 62.9144,
  "indicators": [
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "pod",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "npac",
      "status": "too_hard",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "ice_fraction",
      "status": "too_hard",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "lactose",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "lactose_sandiness_risk",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "fat",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "aerating_protein",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "protein_in_solids",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "total_solids",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "water",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "alcohol",
      "status": "good",
      "temperature_fallback": false,
    },
  ],
  "npac": 25.0285,
  "nutrition": {
    "alcohol_g": 0,
    "carbohydrate_g": 21.6,
    "fat_g": 6.92,
    "fiber_g": 0.4,
    "kcal": 163.33,
    "protein_g": 3.72,
    "salt_g": 0.11,
    "saturated_fat_g": null,
    "sugars_g": 21.2,
  },
  "pac": 23.683,
  "percentages": {
    "alcohol_percent": 0,
    "dextrose_percent": 2.76,
    "fat_percent": 6.923,
    "fiber_percent": 0.4,
    "fructose_percent": 0,
    "glucose_percent": 0,
    "lactose_percent": 5.439,
    "polyol_percent": 0,
    "protein_percent": 3.722,
    "salt_percent": 0.115,
    "solids_percent": 33.2955,
    "sucrose_percent": 13,
    "water_percent": 66.7045,
  },
  "pod": 15.9126,
  "scores": {
    "cost": 100,
    "flavor": 70,
    "overall": 76.79,
    "technical": 68.23,
  },
  "total_batch_g": 1000,
  "warnings": [],
}
`;

exports[`golden recipes — snapshot regression > over-sugared-rescue: result snapshot is stable 1`] = `
{
  "config_version": "0.4.0",
  "cost_complete": true,
  "engine_version": "0.4.0",
  "ice_fraction": 35.1722,
  "indicators": [
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "pod",
      "status": "too_sweet",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "npac",
      "status": "too_soft",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "ice_fraction",
      "status": "too_soft",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "lactose",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "lactose_sandiness_risk",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "fat",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "aerating_protein",
      "status": "needs_correction",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "protein_in_solids",
      "status": "needs_correction",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "total_solids",
      "status": "needs_correction",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "water",
      "status": "needs_correction",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "alcohol",
      "status": "good",
      "temperature_fallback": false,
    },
  ],
  "npac": 51.3106,
  "nutrition": {
    "alcohol_g": 0,
    "carbohydrate_g": 37.21,
    "fat_g": 5.53,
    "fiber_g": 0.32,
    "kcal": 210.17,
    "protein_g": 2.95,
    "salt_g": 0.09,
    "saturated_fat_g": null,
    "sugars_g": 36.89,
  },
  "pac": 50.2444,
  "percentages": {
    "alcohol_percent": 0,
    "dextrose_percent": 14.8387,
    "fat_percent": 5.5266,
    "fiber_percent": 0.3226,
    "fructose_percent": 0,
    "glucose_percent": 0,
    "lactose_percent": 4.3089,
    "polyol_percent": 0,
    "protein_percent": 2.9484,
    "salt_percent": 0.0911,
    "solids_percent": 46.5206,
    "sucrose_percent": 17.7419,
    "water_percent": 53.4794,
  },
  "pod": 29.412,
  "scores": {
    "cost": 100,
    "flavor": 70,
    "overall": 62.97,
    "technical": 33.68,
  },
  "total_batch_g": 1240,
  "warnings": [
    "batch_mass_mismatch",
  ],
}
`;

exports[`golden recipes — snapshot regression > pistachio-high-fat: result snapshot is stable 1`] = `
{
  "config_version": "0.4.0",
  "cost_complete": true,
  "engine_version": "0.4.0",
  "ice_fraction": 61.5376,
  "indicators": [
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "pod",
      "status": "too_sweet",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "npac",
      "status": "too_hard",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "ice_fraction",
      "status": "too_hard",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "lactose",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "lactose_sandiness_risk",
      "status": "risky",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "fat",
      "status": "needs_correction",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "aerating_protein",
      "status": "needs_correction",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "protein_in_solids",
      "status": "needs_correction",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "total_solids",
      "status": "needs_correction",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "water",
      "status": "needs_correction",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "alcohol",
      "status": "good",
      "temperature_fallback": false,
    },
  ],
  "npac": 26.3328,
  "nutrition": {
    "alcohol_g": 0,
    "carbohydrate_g": 25.62,
    "fat_g": 12.85,
    "fiber_g": 1.9,
    "kcal": 238.3,
    "protein_g": 6.41,
    "salt_g": 0.1,
    "saturated_fat_g": null,
    "sugars_g": 22.32,
  },
  "pac": 25.116,
  "percentages": {
    "alcohol_percent": 0,
    "dextrose_percent": 3.22,
    "fat_percent": 12.847,
    "fiber_percent": 1.9,
    "fructose_percent": 0,
    "glucose_percent": 0,
    "lactose_percent": 4.948,
    "polyol_percent": 0,
    "protein_percent": 6.41,
    "salt_percent": 0.104,
    "solids_percent": 46.802,
    "sucrose_percent": 14.05,
    "water_percent": 53.198,
  },
  "pod": 17.2245,
  "scores": {
    "cost": 100,
    "flavor": 97.5,
    "overall": 66.38,
    "technical": 36.38,
  },
  "total_batch_g": 1000,
  "warnings": [],
}
`;

exports[`golden recipes — snapshot regression > raspberry-premium: result snapshot is stable 1`] = `
{
  "config_version": "0.4.0",
  "cost_complete": true,
  "engine_version": "0.4.0",
  "ice_fraction": 62.731,
  "indicators": [
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "pod",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "npac",
      "status": "too_hard",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "ice_fraction",
      "status": "too_hard",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "lactose",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "lactose_sandiness_risk",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "fat",
      "status": "needs_correction",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "aerating_protein",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "protein_in_solids",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "total_solids",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "water",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "alcohol",
      "status": "good",
      "temperature_fallback": false,
    },
  ],
  "npac": 25.2022,
  "nutrition": {
    "alcohol_g": 0,
    "carbohydrate_g": 22.62,
    "fat_g": 4.27,
    "fiber_g": 2.67,
    "kcal": 138.61,
    "protein_g": 3.25,
    "salt_g": 0.09,
    "saturated_fat_g": null,
    "sugars_g": 19.91,
  },
  "pac": 24.196,
  "percentages": {
    "alcohol_percent": 0,
    "dextrose_percent": 3.22,
    "fat_percent": 4.267,
    "fiber_percent": 2.675,
    "fructose_percent": 0.84,
    "glucose_percent": 0.7,
    "lactose_percent": 4.152,
    "polyol_percent": 0,
    "protein_percent": 3.25,
    "salt_percent": 0.086,
    "solids_percent": 31.458,
    "sucrose_percent": 11,
    "water_percent": 68.542,
  },
  "pod": 16.0183,
  "scores": {
    "cost": 100,
    "flavor": 100,
    "overall": 83.91,
    "technical": 59.77,
  },
  "total_batch_g": 1000,
  "warnings": [],
}
`;
